--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
             "email": "abel@goodyweb.com.ph"
         }
     ],
+    "license": "proprietary",
     "extra": {
         "laravel": {
            "providers": [
